tests/invalid/function/generic_item_expected_fn_bound_unsatisfied.facet
trait Show;

impl Show for affine bool;

fn keep<T>(x: affine T) -> affine T where T: Show {
  x
}

fn main() -> affine isize {
  let f: unrestricted fn(affine isize) -> affine isize = keep in
  (f 1)
}
